Finalizando a tela de usuario e aprimorando a API

--- a/NewClick.UI/Views/_ViewImports.cshtml
+++ b/NewClick.UI/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using NewClick.UI
 @using NewClick.UI.Models
+@using NewClick.UI.ViewModels
+@using NewClick.UI.Services.Interfaces
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
